// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsDialog > Initial Rendering > should render settings list with visual indicators 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                               On  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                  Off  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'accessibility settings enabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 On*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                               On  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                  Off  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'all boolean settings disabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                Off*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                              On*  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                 Off*  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'default state' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                               On  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                  Off  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'file filtering settings configured' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                               On  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                  Off  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'focused on scope selector' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│    Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│    Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                               On  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                  Off  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│  > Apply To                                                                                      │
│  ● 1. User Settings                                                                              │
│    2. Workspace Settings                                                                         │
│    3. System Settings                                                                            │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'mixed boolean and number settings' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                Off*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                             Off*  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                  Off  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'tools and security settings' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                               On  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                  Off  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'various boolean settings enabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 On*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Auto Update                                                                             Off*  │
│    Enable automatic updates.                                                                     │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│                                                                                                  │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│    Debug Keystroke Logging                                                                  On*  │
│    Enable debug logging of keystrokes to the console.                                            │
│                                                                                                  │
│    Session Cleanup                                                                          Off  │
│    Enable automatic session cleanup                                                              │
│                                                                                                  │
│    Chat History Period                                                                undefined  │
│    Automatically delete chats older than this time period (e.g., "30d", "7d", "24h…              │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
